--- a/1. visual_studio_code_installation.md
+++ b/1. visual_studio_code_installation.md
@@ -9,7 +9,16 @@ https://www.python.org/downloads/
 2. 아래 파일을 실행하여 Python을 설치합니다 (커널)
 
 Mac OS : python-3.9.4-macosx10.9.pkg
+
 Win 10 : python-3.9.4-amd64.exe
+
+
+<img src="https://github.com/dscoool/gist-aix/blob/main/py_install_01.png">
+<img src="https://github.com/dscoool/gist-aix/blob/main/py_install_02.png">
+<img src="https://github.com/dscoool/gist-aix/blob/main/py_install_03.png">
+<img src="https://github.com/dscoool/gist-aix/blob/main/py_install_04.png">
+
+
 
 파이썬 커널을 다 설치한 후, 
 
