--- a/1. visual_studio_code_installation.md
+++ b/1. visual_studio_code_installation.md
@@ -22,7 +22,7 @@ Win 10 : python-3.9.4-amd64.exe
 
 파이썬 커널을 다 설치한 후, 
 
-3. visualstudio code 에 접속하여 본인 PC에 맞는 버전을 다운받습니다.
+3. Visual Studio Code 에 접속하여 본인 PC에 맞는 버전을 다운받습니다.
 
 https://code.visualstudio.com/
 
