--- a/1. visual_studio_code_installation.md
+++ b/1. visual_studio_code_installation.md
@@ -6,6 +6,8 @@ Microsoft Visual Studio Code 설치 및 환경설정
 
 https://www.python.org/downloads/
 
+<img src = "https://github.com/dscoool/gist-aix/blob/main/py_install.png">
+
 2. 아래 파일을 실행하여 Python을 설치합니다 (커널)
 
 Mac OS : python-3.9.4-macosx10.9.pkg
