--- a/1. visual_studio_code_installation.md
+++ b/1. visual_studio_code_installation.md
@@ -28,24 +28,40 @@ Win 10 : python-3.9.4-amd64.exe
 
 https://code.visualstudio.com/
 
-4. Visual Code Studio를 실행하고, 좌측 Extentions / 확장 (Ctrl + Shift + X)를 누른 후,
+4. Visual Code Studio를 실행하고, 
 
-Python을 검색하여 아래 python 확장 프로그램(python extension)을 설치합니다.!
+a. 좌측 메뉴 Extentions / 확장 버튼을 누른 후, (Ctrl + Shift + X)
 
+b. Python을 검색
+
+c. PYTHON 확장 프로그램(PYTHON EXTENSION)을 설치합니다.!
+   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 <img src = "https://docs.microsoft.com/ko-kr/learn/language/python-install-vscode/media/visual-studio-code-extensions-open.png">
 
 <img src = "https://docs.microsoft.com/ko-kr/learn/language/python-install-vscode/media/visual-studio-code-extensions-install.png">
 
-5. 동일하게 Extensions / 확장 프로그램(Ctrl + Shift + X)에서 'Jupyter'를 검색한 후, 설치합니다.
+
+
+5. 동일하게 
+
+a. 좌측 메뉴 Extensions / 확장 프로그램에서 (Ctrl + Shift + X)
+
+b. 'Jupyter'를 검색한 후,
+
+c. 'Jupyter' (Microsoft)를 설치해 주세요!!
 
 <img src="https://github.com/dscoool/gist-aix/blob/main/visual-studio-code-jupyter-install.png">
 
-6. Terminal --> New Terminal을 눌러 터미널을 호출한 후,
 
-터미널 창에 python -V 를 입력하여 파이썬 버전을 확인합니다.
 
-7. New --> New File을 클릭 --> (주의!) 팝업창에서 Jupyter Notebook을 클릭하여 아래와 같은 화면을 불러옵니다.
+6. 메뉴의 Terminal --> New Terminal을 눌러 터미널을 호출한 후,
+
+우측 아래 터미널 명령어 창에 python -V 를 입력하여 파이썬 버전을 확인합니다.
+                            ^^^^^^^^^^ 
+                            
+                            
+7. 이제 메뉴의 New --> New File을 클릭 --> (주의!) 새로 생성된 POP-UP창(팝업창)에서 Jupyter Notebook을 클릭하여 아래와 같은 화면을 불러오세요!!
 
 설정 완료!!
 
