--- a/2강.위키피디아_데이터_수집.ipynb
+++ b/2강.위키피디아_데이터_수집.ipynb
@@ -378,6 +378,15 @@
                 "\r\n"
             ],
             "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "과제1. '파이썬'외에 수강생이 지정한 검색어 1개를 가지고 wikipedia를 검색한 뒤,\r\n",
+                "결과를 출력해 봅시다!!\r\n",
+                "과제제출. 위키_수강생이름.ipynb 로 저장한 뒤, dscool.kr@gmail.com으로 제출하세요!! (마감일 8/12)"
+            ],
+            "metadata": {}
         }
     ],
     "metadata": {
