--- a/9강_교차검증.ipynb
+++ b/9강_교차검증.ipynb
@@ -1,6 +1,29 @@
 {
     "cells": [
         {
+            "cell_type": "markdown",
+            "source": [
+                "## 교차검증 \r\n",
+                "## Cross Validation\r\n",
+                "\r\n",
+                "\r\n",
+                "교차검증의 종류\r\n",
+                " \r\n",
+                "\r\n",
+                "1. KFold CV : 가장 보편적인 교차 검증 기법. 회귀분석\r\n",
+                "\r\n",
+                "   :  k-1개의 train세트와 1개의 test(or 검증)세트로 k번 검증 평가를 해서 평균으로 최종평가를 냄\r\n",
+                "\r\n",
+                " \r\n",
+                "\r\n",
+                "회귀에서 Stratified KFold는 지원하지 않고, KFold만 사용가능. 회귀의 연속된 숫자값을 결정값별로 분포를 정할      필요 없기 때문.\r\n",
+                "분류에서 사용할 때 문제점 : 레이블 데이터가 불균형일 때 너무 편파적으로 나뉨.\r\n",
+                "\r\n",
+                "![K-Fold Cross Validation](kfoldcv.png)"
+            ],
+            "metadata": {}
+        },
+        {
             "cell_type": "code",
             "execution_count": 1,
             "source": [
@@ -334,7 +357,16 @@
             "cell_type": "markdown",
             "source": [
                 "STRATIFIED CROSS VALIDATION\r\n",
-                "계층별 k-겹 교차 검증"
+                "계층별 k-겹 교차 검증\r\n",
+                "\r\n",
+                "Stratified KFold CV : 불균형한 분포도를 가진 레이블에 쓰임. 분류분석\r\n",
+                "\r\n",
+                " \r\n",
+                "\r\n",
+                "Stratified Kfold 는 Kfold가 레이블 데이터가 제대로 분배되지 못하는 경우의 문제를 해결해 준다. \r\n",
+                "원본 데이터의 레이블 분포를 먼저 고려한뒤 이 분포와 동일하게 학습과 검증 데이터 세트를 분배하는 방식\r\n",
+                "레이블 분포에 따라 학습/테스트 세트를 나눔\r\n",
+                " "
             ],
             "metadata": {}
         },
